	  default in the demo configuration (2013-10-19).
	* arch/arm/src/sama5/sam_rtc.h and other files:  Hook the SAMA5 RTC
	  driver into the build system; Verify the correct operation of the
	  SAMA5 RTC driver (2013-10-19).
	* arch/arm/src/sama5/sam_wdt.c and .h:  Add a SAMA5 watchdog timer
	  drvier. Untested on initial check-in (2013-10-19).
	* arch/arm/src/sama5/sam_trng.c, sam_trng.h, and chip/sam_trng.h:  Add
	  a /dev/random driver based on the SAMA5D3 TRNG peripheral (2013-10-20).
	* configs/sama5d3x-3k/demo:  The TRNG and /dev/random are now enabled
	  by default in the demo configuration (2013-10-20).
	* arch/arm/src/sama5/chip/sam_tc.h:  SAMA5D3 timer/counter register
	  definition header file (2013-10-20).
	* libc/stdio/lib_sscanf.c:  scanf() fixes from kfrolov: 1) sscanf()
	  function hangs in the following example: sscanf("2", "%u,%u,%u,%u", ...),
	  2) sscanf() returns incorrect number of parsed numbers if some arguments
	  can't be parsed: sscanf("=2", "%u,%u,%u,%u",...)==1 instead of 0, and
	  3) using of char* instead of const char* in vsscanf function leads to
	  warnings from GCC (2013-10-21).
	* arch/arm/src/sama5/chip/sam_can.h:  SAMA5D3X CAN register definition
	  header file (2013-10-21)
	* arch/arm/src/sama5/sam_can.c and .h:  Framework for a SAMA5 CAN driver.
	  Initial checkin is the STM32 CAN driver with name changes (2013-10-21).
	* arch/arm/src/sama5/sam_can.c and .h: SAMA5 CAN driver is code complete
	  but still untested (2013-10-22).
	* configs/spark:  Spark configuration updated by David Sidrane (2013-10-23).
	* drivers/wireless/cc3000:  CC3000 driver updates from David Sidrane
	  (2013-10-23).
	* include/nuttx/wireless/cc3000:  More CC3000 driver updates from David
	  Sidrane (2013-10-23).
	* net/Kconfig, drivers/net/wireless/cc3000/Kconfig, and Kconfig:  Add
	  ARCH_HAVE_NET that determines if a network is present or not.  This
	  currently can happen if CONFIG_NET is set or if CONFIG_WL_CC3000 is
	  is set (23013-10-23).
